1. Rebranded LSEG 2. Updated RTSDK links to be updated 3. Added JavaFX requirement and run information 4. Added JavaFX dependency to pom.xml